// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClientAppUninstallConfirmation UninstallationsSuccessModal should match a snapshot 1`] = `
<UninstallationsSuccessModal
  appDetailData={
    Object {
      "description": "enim facilisis",
      "developer": "Pete's Proptech World Ltd",
      "homePage": "http://myawesomeproptechproduct.io",
      "id": "9b6fd5f7-2c15-483d-b925-01b650538e52",
      "installationId": "123",
      "isWebComponent": true,
      "media": Array [
        Object {
          "description": "Application Icon",
          "type": "icon",
          "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/7d88729f-2366-4561-9d5c-282615f3946b.jpeg",
        },
        Object {
          "description": "Application Image",
          "type": "image",
          "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png",
        },
        Object {
          "description": "Application Image",
          "type": "image",
          "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png",
        },
      ],
      "name": "Peter's Properties",
      "scopes": Array [
        Object {
          "description": "Read data about developers",
          "name": "Marketplace/developers.read",
        },
        Object {
          "description": "Write data about developers",
          "name": "Marketplace/developers.write",
        },
      ],
      "summary": "vitae elementum curabitur vitae",
      "supportEmail": "support@reapit.com",
      "telephone": "0113 288 2900",
    }
  }
  hasPermissionError={false}
  onSuccessAlertButtonClick={[MockFunction]}
  visible={true}
>
  <ModalV2
    hasHeader={false}
    isCentered={true}
    isPadding={false}
    visible={true}
  >
    <Dialog
      className="m1s2ncsn-modal-container m1257vs8-modal-no-header"
      closeIcon={
        <span
          aria-label="close"
          className="delete"
        />
      }
      destroyOnClose={true}
      title={<ModalHeaderV2 />}
      visible={true}
      wrapClassName="m1iljaow-modal-centered m1y19rn5-modal-no-padding"
    >
      <PortalWrapper
        visible={true}
      >
        <ForwardRef
          getContainer={[Function]}
        >
          <Portal
            containerInfo={
              <div>
                <div
                  class="rc-dialog-root"
                >
                  <div
                    class="rc-dialog-mask"
                  />
                  <div
                    aria-labelledby="rcDialogTitle1"
                    class="rc-dialog-wrap m1iljaow-modal-centered m1y19rn5-modal-no-padding"
                    role="dialog"
                    tabindex="-1"
                  >
                    <div
                      class="rc-dialog m1s2ncsn-modal-container m1257vs8-modal-no-header"
                      role="document"
                    >
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                        tabindex="0"
                      />
                      <div
                        class="rc-dialog-content"
                      >
                        <button
                          aria-label="Close"
                          class="rc-dialog-close"
                          type="button"
                        >
                          <span
                            aria-label="close"
                            class="delete"
                          />
                        </button>
                        <div
                          class="rc-dialog-header"
                        >
                          <div
                            class="rc-dialog-title"
                            id="rcDialogTitle1"
                          >
                            <h4
                              class="modal-card-title is-4 pt-2 pb-2"
                            />
                          </div>
                        </div>
                        <div
                          class="rc-dialog-body"
                        >
                          <div
                            class=""
                            data-test="uinstallations-success-message"
                          >
                            <div
                              class="notification is-success mb-0"
                              data-test=""
                              role="alert"
                            >
                              Success
                            </div>
                            <div
                              class="container-flex is-column has-background has-padding"
                            >
                              <p>
                                Peter's Properties
                                 has been successfully uninstalled
                              </p>
                              <div
                                class="has-text-right"
                              >
                                <button
                                  class="button  is-primary  "
                                  data-test="uinstallations-success-button"
                                  type="button"
                                >
                                  Back to List
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <Dialog
              afterClose={[Function]}
              className="m1s2ncsn-modal-container m1257vs8-modal-no-header"
              closeIcon={
                <span
                  aria-label="close"
                  className="delete"
                />
              }
              destroyOnClose={true}
              getContainer={[Function]}
              getOpenCount={[Function]}
              scrollLocker={
                ScrollLocker {
                  "getContainer": [Function],
                  "lock": [Function],
                  "lockTarget": 1,
                  "options": Object {
                    "container": <body
                      class="ant-scrolling-effect"
                      style="width: calc(100% - 0px); overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
                    >
                      <div>
                        <div
                          class="rc-dialog-root"
                        >
                          <div
                            class="rc-dialog-mask"
                          />
                          <div
                            aria-labelledby="rcDialogTitle0"
                            class="rc-dialog-wrap m1iljaow-modal-centered"
                            role="dialog"
                            tabindex="-1"
                          >
                            <div
                              class="rc-dialog m1s2ncsn-modal-container"
                              role="document"
                            >
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                              <div
                                class="rc-dialog-content"
                              >
                                <button
                                  aria-label="Close"
                                  class="rc-dialog-close"
                                  type="button"
                                >
                                  <span
                                    aria-label="close"
                                    class="delete"
                                  />
                                </button>
                                <div
                                  class="rc-dialog-header"
                                >
                                  <div
                                    class="rc-dialog-title"
                                    id="rcDialogTitle0"
                                  >
                                    <h4
                                      class="modal-card-title is-4 pt-2 pb-2"
                                    >
                                      Confirm Peter's Properties uninstallation
                                    </h4>
                                  </div>
                                </div>
                                <div
                                  class="rc-dialog-body"
                                >
                                  Are you sure you wish to uninstall 
                                  Peter's Properties
                                  ? This action will uninstall the app for 
                                  <b>
                                    all
                                  </b>
                                   members of your organisation.
                                </div>
                                <div
                                  class="rc-dialog-footer"
                                >
                                  <div
                                    class="flex"
                                  >
                                    <button
                                      class="button i5943rj-install-button is-secondary  "
                                      data-test="disagree-btn"
                                      type="button"
                                    >
                                      Cancel
                                    </button>
                                    <button
                                      class="button i5943rj-install-button is-danger  "
                                      data-test="agree-btn"
                                      type="button"
                                    >
                                      Confirm
                                    </button>
                                  </div>
                                </div>
                              </div>
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div>
                        <div
                          class="rc-dialog-root"
                        >
                          <div
                            class="rc-dialog-mask"
                          />
                          <div
                            aria-labelledby="rcDialogTitle1"
                            class="rc-dialog-wrap m1iljaow-modal-centered m1y19rn5-modal-no-padding"
                            role="dialog"
                            tabindex="-1"
                          >
                            <div
                              class="rc-dialog m1s2ncsn-modal-container m1257vs8-modal-no-header"
                              role="document"
                            >
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                              <div
                                class="rc-dialog-content"
                              >
                                <button
                                  aria-label="Close"
                                  class="rc-dialog-close"
                                  type="button"
                                >
                                  <span
                                    aria-label="close"
                                    class="delete"
                                  />
                                </button>
                                <div
                                  class="rc-dialog-header"
                                >
                                  <div
                                    class="rc-dialog-title"
                                    id="rcDialogTitle1"
                                  >
                                    <h4
                                      class="modal-card-title is-4 pt-2 pb-2"
                                    />
                                  </div>
                                </div>
                                <div
                                  class="rc-dialog-body"
                                >
                                  <div
                                    class=""
                                    data-test="uinstallations-success-message"
                                  >
                                    <div
                                      class="notification is-success mb-0"
                                      data-test=""
                                      role="alert"
                                    >
                                      Success
                                    </div>
                                    <div
                                      class="container-flex is-column has-background has-padding"
                                    >
                                      <p>
                                        Peter's Properties
                                         has been successfully uninstalled
                                      </p>
                                      <div
                                        class="has-text-right"
                                      >
                                        <button
                                          class="button  is-primary  "
                                          data-test="uinstallations-success-button"
                                          type="button"
                                        >
                                          Back to List
                                        </button>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </body>,
                  },
                  "reLock": [Function],
                  "unLock": [Function],
                }
              }
              switchScrollingEffect={[Function]}
              title={<ModalHeaderV2 />}
              visible={true}
              wrapClassName="m1iljaow-modal-centered m1y19rn5-modal-no-padding"
            >
              <div
                className="rc-dialog-root"
              >
                <Mask
                  prefixCls="rc-dialog"
                  style={
                    Object {
                      "zIndex": undefined,
                    }
                  }
                  visible={true}
                >
                  <CSSMotion
                    key="mask"
                    leavedClassName="rc-dialog-mask-hidden"
                    visible={true}
                  >
                    <DomWrapper>
                      <div
                        className="rc-dialog-mask"
                        style={
                          Object {
                            "zIndex": undefined,
                          }
                        }
                      />
                    </DomWrapper>
                  </CSSMotion>
                </Mask>
                <div
                  aria-labelledby="rcDialogTitle1"
                  className="rc-dialog-wrap m1iljaow-modal-centered m1y19rn5-modal-no-padding"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="dialog"
                  style={
                    Object {
                      "display": null,
                      "zIndex": undefined,
                    }
                  }
                  tabIndex={-1}
                >
                  <Content
                    afterClose={[Function]}
                    ariaId="rcDialogTitle1"
                    className="m1s2ncsn-modal-container m1257vs8-modal-no-header"
                    closable={true}
                    closeIcon={
                      <span
                        aria-label="close"
                        className="delete"
                      />
                    }
                    destroyOnClose={true}
                    getContainer={[Function]}
                    getOpenCount={[Function]}
                    onClose={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    onVisibleChanged={[Function]}
                    prefixCls="rc-dialog"
                    scrollLocker={
                      ScrollLocker {
                        "getContainer": [Function],
                        "lock": [Function],
                        "lockTarget": 1,
                        "options": Object {
                          "container": <body
                            class="ant-scrolling-effect"
                            style="width: calc(100% - 0px); overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
                          >
                            <div>
                              <div
                                class="rc-dialog-root"
                              >
                                <div
                                  class="rc-dialog-mask"
                                />
                                <div
                                  aria-labelledby="rcDialogTitle0"
                                  class="rc-dialog-wrap m1iljaow-modal-centered"
                                  role="dialog"
                                  tabindex="-1"
                                >
                                  <div
                                    class="rc-dialog m1s2ncsn-modal-container"
                                    role="document"
                                  >
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                    <div
                                      class="rc-dialog-content"
                                    >
                                      <button
                                        aria-label="Close"
                                        class="rc-dialog-close"
                                        type="button"
                                      >
                                        <span
                                          aria-label="close"
                                          class="delete"
                                        />
                                      </button>
                                      <div
                                        class="rc-dialog-header"
                                      >
                                        <div
                                          class="rc-dialog-title"
                                          id="rcDialogTitle0"
                                        >
                                          <h4
                                            class="modal-card-title is-4 pt-2 pb-2"
                                          >
                                            Confirm Peter's Properties uninstallation
                                          </h4>
                                        </div>
                                      </div>
                                      <div
                                        class="rc-dialog-body"
                                      >
                                        Are you sure you wish to uninstall 
                                        Peter's Properties
                                        ? This action will uninstall the app for 
                                        <b>
                                          all
                                        </b>
                                         members of your organisation.
                                      </div>
                                      <div
                                        class="rc-dialog-footer"
                                      >
                                        <div
                                          class="flex"
                                        >
                                          <button
                                            class="button i5943rj-install-button is-secondary  "
                                            data-test="disagree-btn"
                                            type="button"
                                          >
                                            Cancel
                                          </button>
                                          <button
                                            class="button i5943rj-install-button is-danger  "
                                            data-test="agree-btn"
                                            type="button"
                                          >
                                            Confirm
                                          </button>
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div>
                              <div
                                class="rc-dialog-root"
                              >
                                <div
                                  class="rc-dialog-mask"
                                />
                                <div
                                  aria-labelledby="rcDialogTitle1"
                                  class="rc-dialog-wrap m1iljaow-modal-centered m1y19rn5-modal-no-padding"
                                  role="dialog"
                                  tabindex="-1"
                                >
                                  <div
                                    class="rc-dialog m1s2ncsn-modal-container m1257vs8-modal-no-header"
                                    role="document"
                                  >
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                    <div
                                      class="rc-dialog-content"
                                    >
                                      <button
                                        aria-label="Close"
                                        class="rc-dialog-close"
                                        type="button"
                                      >
                                        <span
                                          aria-label="close"
                                          class="delete"
                                        />
                                      </button>
                                      <div
                                        class="rc-dialog-header"
                                      >
                                        <div
                                          class="rc-dialog-title"
                                          id="rcDialogTitle1"
                                        >
                                          <h4
                                            class="modal-card-title is-4 pt-2 pb-2"
                                          />
                                        </div>
                                      </div>
                                      <div
                                        class="rc-dialog-body"
                                      >
                                        <div
                                          class=""
                                          data-test="uinstallations-success-message"
                                        >
                                          <div
                                            class="notification is-success mb-0"
                                            data-test=""
                                            role="alert"
                                          >
                                            Success
                                          </div>
                                          <div
                                            class="container-flex is-column has-background has-padding"
                                          >
                                            <p>
                                              Peter's Properties
                                               has been successfully uninstalled
                                            </p>
                                            <div
                                              class="has-text-right"
                                            >
                                              <button
                                                class="button  is-primary  "
                                                data-test="uinstallations-success-button"
                                                type="button"
                                              >
                                                Back to List
                                              </button>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </body>,
                        },
                        "reLock": [Function],
                        "unLock": [Function],
                      }
                    }
                    switchScrollingEffect={[Function]}
                    title={<ModalHeaderV2 />}
                    visible={true}
                    wrapClassName="m1iljaow-modal-centered m1y19rn5-modal-no-padding"
                  >
                    <CSSMotion
                      onAppearPrepare={[Function]}
                      onEnterPrepare={[Function]}
                      onVisibleChanged={[Function]}
                      removeOnLeave={true}
                      visible={true}
                    >
                      <DomWrapper>
                        <div
                          className="rc-dialog m1s2ncsn-modal-container m1257vs8-modal-no-header"
                          key="dialog-element"
                          onMouseDown={[Function]}
                          onMouseUp={[Function]}
                          role="document"
                          style={Object {}}
                        >
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "outline": "none",
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                          <Component
                            shouldUpdate={true}
                          >
                            <div
                              className="rc-dialog-content"
                            >
                              <button
                                aria-label="Close"
                                className="rc-dialog-close"
                                onClick={[Function]}
                                type="button"
                              >
                                <span
                                  aria-label="close"
                                  className="delete"
                                />
                              </button>
                              <div
                                className="rc-dialog-header"
                              >
                                <div
                                  className="rc-dialog-title"
                                  id="rcDialogTitle1"
                                >
                                  <ModalHeaderV2>
                                    <h4
                                      className="modal-card-title is-4 pt-2 pb-2"
                                    />
                                  </ModalHeaderV2>
                                </div>
                              </div>
                              <div
                                className="rc-dialog-body"
                              >
                                <CallToAction
                                  buttonDataTest="uinstallations-success-button"
                                  buttonText="Back to List"
                                  dataTest="uinstallations-success-message"
                                  isCenter={true}
                                  onButtonClick={[MockFunction]}
                                  title="Success"
                                  type="success"
                                >
                                  <div
                                    className=""
                                    data-test="uinstallations-success-message"
                                  >
                                    <Alert
                                      className="mb-0"
                                      message="Success"
                                      type="success"
                                    >
                                      <div
                                        className="notification is-success mb-0"
                                        data-test=""
                                        role="alert"
                                      >
                                        Success
                                      </div>
                                    </Alert>
                                    <FlexContainerBasic
                                      flexColumn={true}
                                      hasBackground={true}
                                      hasPadding={true}
                                    >
                                      <div
                                        className="container-flex is-column has-background has-padding"
                                      >
                                        <p>
                                          Peter's Properties
                                           has been successfully uninstalled
                                        </p>
                                        <div
                                          className="has-text-right"
                                        >
                                          <Button
                                            dataTest="uinstallations-success-button"
                                            onClick={[MockFunction]}
                                            type="button"
                                            variant="primary"
                                          >
                                            <button
                                              className="button  is-primary  "
                                              data-test="uinstallations-success-button"
                                              disabled={false}
                                              onClick={[MockFunction]}
                                              type="button"
                                            >
                                              Back to List
                                            </button>
                                          </Button>
                                        </div>
                                      </div>
                                    </FlexContainerBasic>
                                  </div>
                                </CallToAction>
                              </div>
                            </div>
                          </Component>
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "outline": "none",
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                        </div>
                      </DomWrapper>
                    </CSSMotion>
                  </Content>
                </div>
              </div>
            </Dialog>
          </Portal>
        </ForwardRef>
      </PortalWrapper>
    </Dialog>
  </ModalV2>
</UninstallationsSuccessModal>
`;

exports[`ClientAppUninstallConfirmation renderUninstallConfirmationModalFooter should match snapshot 1`] = `
<div>
  <div
    className="flex"
  >
    <Button
      className="i5943rj-install-button"
      dataTest="disagree-btn"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
      variant="secondary"
    >
      Cancel
    </Button>
    <Button
      className="i5943rj-install-button"
      dataTest="agree-btn"
      loading={false}
      onClick={[Function]}
      type="button"
      variant="danger"
    >
      Confirm
    </Button>
  </div>
</div>
`;

exports[`ClientAppUninstallConfirmation should match a snapshot 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "key": "clientAppDetailRoute",
          "pathname": "/apps/:appid",
        },
      ]
    }
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "clientAppDetailRoute",
              "pathname": "/apps/:appid",
              "search": "",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "clientAppDetailRoute",
            "pathname": "/apps/:appid",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <AppUninstallConfirmation
        appDetailData={
          Object {
            "description": "enim facilisis",
            "developer": "Pete's Proptech World Ltd",
            "homePage": "http://myawesomeproptechproduct.io",
            "id": "9b6fd5f7-2c15-483d-b925-01b650538e52",
            "installationId": "123",
            "isWebComponent": true,
            "media": Array [
              Object {
                "description": "Application Icon",
                "type": "icon",
                "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/7d88729f-2366-4561-9d5c-282615f3946b.jpeg",
              },
              Object {
                "description": "Application Image",
                "type": "image",
                "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png",
              },
              Object {
                "description": "Application Image",
                "type": "image",
                "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png",
              },
            ],
            "name": "Peter's Properties",
            "scopes": Array [
              Object {
                "description": "Read data about developers",
                "name": "Marketplace/developers.read",
              },
              Object {
                "description": "Write data about developers",
                "name": "Marketplace/developers.write",
              },
            ],
            "summary": "vitae elementum curabitur vitae",
            "supportEmail": "support@reapit.com",
            "telephone": "0113 288 2900",
          }
        }
        closeUninstallConfirmationModal={[MockFunction]}
        visible={true}
      >
        <ModalV2
          afterClose={[Function]}
          footer={
            <div
              className="flex"
            >
              <Button
                className="i5943rj-install-button"
                dataTest="disagree-btn"
                disabled={false}
                onClick={[MockFunction]}
                type="button"
                variant="secondary"
              >
                Cancel
              </Button>
              <Button
                className="i5943rj-install-button"
                dataTest="agree-btn"
                loading={false}
                onClick={[Function]}
                type="button"
                variant="danger"
              >
                Confirm
              </Button>
            </div>
          }
          isCentered={true}
          title="Confirm Peter's Properties uninstallation"
          visible={true}
        >
          <Dialog
            className="m1s2ncsn-modal-container"
            closeIcon={
              <span
                aria-label="close"
                className="delete"
                onClick={[Function]}
              />
            }
            destroyOnClose={true}
            footer={
              <div
                className="flex"
              >
                <Button
                  className="i5943rj-install-button"
                  dataTest="disagree-btn"
                  disabled={false}
                  onClick={[MockFunction]}
                  type="button"
                  variant="secondary"
                >
                  Cancel
                </Button>
                <Button
                  className="i5943rj-install-button"
                  dataTest="agree-btn"
                  loading={false}
                  onClick={[Function]}
                  type="button"
                  variant="danger"
                >
                  Confirm
                </Button>
              </div>
            }
            title={
              <ModalHeaderV2>
                Confirm Peter's Properties uninstallation
              </ModalHeaderV2>
            }
            visible={true}
            wrapClassName="m1iljaow-modal-centered"
          >
            <PortalWrapper
              visible={true}
            >
              <ForwardRef
                getContainer={[Function]}
              >
                <Portal
                  containerInfo={
                    <div>
                      <div
                        class="rc-dialog-root"
                      >
                        <div
                          class="rc-dialog-mask"
                        />
                        <div
                          aria-labelledby="rcDialogTitle0"
                          class="rc-dialog-wrap m1iljaow-modal-centered"
                          role="dialog"
                          tabindex="-1"
                        >
                          <div
                            class="rc-dialog m1s2ncsn-modal-container"
                            role="document"
                          >
                            <div
                              aria-hidden="true"
                              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                              tabindex="0"
                            />
                            <div
                              class="rc-dialog-content"
                            >
                              <button
                                aria-label="Close"
                                class="rc-dialog-close"
                                type="button"
                              >
                                <span
                                  aria-label="close"
                                  class="delete"
                                />
                              </button>
                              <div
                                class="rc-dialog-header"
                              >
                                <div
                                  class="rc-dialog-title"
                                  id="rcDialogTitle0"
                                >
                                  <h4
                                    class="modal-card-title is-4 pt-2 pb-2"
                                  >
                                    Confirm Peter's Properties uninstallation
                                  </h4>
                                </div>
                              </div>
                              <div
                                class="rc-dialog-body"
                              >
                                Are you sure you wish to uninstall 
                                Peter's Properties
                                ? This action will uninstall the app for 
                                <b>
                                  all
                                </b>
                                 members of your organisation.
                              </div>
                              <div
                                class="rc-dialog-footer"
                              >
                                <div
                                  class="flex"
                                >
                                  <button
                                    class="button i5943rj-install-button is-secondary  "
                                    data-test="disagree-btn"
                                    type="button"
                                  >
                                    Cancel
                                  </button>
                                  <button
                                    class="button i5943rj-install-button is-danger  "
                                    data-test="agree-btn"
                                    type="button"
                                  >
                                    Confirm
                                  </button>
                                </div>
                              </div>
                            </div>
                            <div
                              aria-hidden="true"
                              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                              tabindex="0"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  }
                >
                  <Dialog
                    afterClose={[Function]}
                    className="m1s2ncsn-modal-container"
                    closeIcon={
                      <span
                        aria-label="close"
                        className="delete"
                        onClick={[Function]}
                      />
                    }
                    destroyOnClose={true}
                    footer={
                      <div
                        className="flex"
                      >
                        <Button
                          className="i5943rj-install-button"
                          dataTest="disagree-btn"
                          disabled={false}
                          onClick={[MockFunction]}
                          type="button"
                          variant="secondary"
                        >
                          Cancel
                        </Button>
                        <Button
                          className="i5943rj-install-button"
                          dataTest="agree-btn"
                          loading={false}
                          onClick={[Function]}
                          type="button"
                          variant="danger"
                        >
                          Confirm
                        </Button>
                      </div>
                    }
                    getContainer={[Function]}
                    getOpenCount={[Function]}
                    scrollLocker={
                      ScrollLocker {
                        "getContainer": [Function],
                        "lock": [Function],
                        "lockTarget": 0,
                        "options": Object {
                          "container": <body
                            class="ant-scrolling-effect"
                            style="width: calc(100% - 0px); overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
                          >
                            <div>
                              <div
                                class="rc-dialog-root"
                              >
                                <div
                                  class="rc-dialog-mask"
                                />
                                <div
                                  aria-labelledby="rcDialogTitle0"
                                  class="rc-dialog-wrap m1iljaow-modal-centered"
                                  role="dialog"
                                  tabindex="-1"
                                >
                                  <div
                                    class="rc-dialog m1s2ncsn-modal-container"
                                    role="document"
                                  >
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                    <div
                                      class="rc-dialog-content"
                                    >
                                      <button
                                        aria-label="Close"
                                        class="rc-dialog-close"
                                        type="button"
                                      >
                                        <span
                                          aria-label="close"
                                          class="delete"
                                        />
                                      </button>
                                      <div
                                        class="rc-dialog-header"
                                      >
                                        <div
                                          class="rc-dialog-title"
                                          id="rcDialogTitle0"
                                        >
                                          <h4
                                            class="modal-card-title is-4 pt-2 pb-2"
                                          >
                                            Confirm Peter's Properties uninstallation
                                          </h4>
                                        </div>
                                      </div>
                                      <div
                                        class="rc-dialog-body"
                                      >
                                        Are you sure you wish to uninstall 
                                        Peter's Properties
                                        ? This action will uninstall the app for 
                                        <b>
                                          all
                                        </b>
                                         members of your organisation.
                                      </div>
                                      <div
                                        class="rc-dialog-footer"
                                      >
                                        <div
                                          class="flex"
                                        >
                                          <button
                                            class="button i5943rj-install-button is-secondary  "
                                            data-test="disagree-btn"
                                            type="button"
                                          >
                                            Cancel
                                          </button>
                                          <button
                                            class="button i5943rj-install-button is-danger  "
                                            data-test="agree-btn"
                                            type="button"
                                          >
                                            Confirm
                                          </button>
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </body>,
                        },
                        "reLock": [Function],
                        "unLock": [Function],
                      }
                    }
                    switchScrollingEffect={[Function]}
                    title={
                      <ModalHeaderV2>
                        Confirm Peter's Properties uninstallation
                      </ModalHeaderV2>
                    }
                    visible={true}
                    wrapClassName="m1iljaow-modal-centered"
                  >
                    <div
                      className="rc-dialog-root"
                    >
                      <Mask
                        prefixCls="rc-dialog"
                        style={
                          Object {
                            "zIndex": undefined,
                          }
                        }
                        visible={true}
                      >
                        <CSSMotion
                          key="mask"
                          leavedClassName="rc-dialog-mask-hidden"
                          visible={true}
                        >
                          <DomWrapper>
                            <div
                              className="rc-dialog-mask"
                              style={
                                Object {
                                  "zIndex": undefined,
                                }
                              }
                            />
                          </DomWrapper>
                        </CSSMotion>
                      </Mask>
                      <div
                        aria-labelledby="rcDialogTitle0"
                        className="rc-dialog-wrap m1iljaow-modal-centered"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="dialog"
                        style={
                          Object {
                            "display": null,
                            "zIndex": undefined,
                          }
                        }
                        tabIndex={-1}
                      >
                        <Content
                          afterClose={[Function]}
                          ariaId="rcDialogTitle0"
                          className="m1s2ncsn-modal-container"
                          closable={true}
                          closeIcon={
                            <span
                              aria-label="close"
                              className="delete"
                              onClick={[Function]}
                            />
                          }
                          destroyOnClose={true}
                          footer={
                            <div
                              className="flex"
                            >
                              <Button
                                className="i5943rj-install-button"
                                dataTest="disagree-btn"
                                disabled={false}
                                onClick={[MockFunction]}
                                type="button"
                                variant="secondary"
                              >
                                Cancel
                              </Button>
                              <Button
                                className="i5943rj-install-button"
                                dataTest="agree-btn"
                                loading={false}
                                onClick={[Function]}
                                type="button"
                                variant="danger"
                              >
                                Confirm
                              </Button>
                            </div>
                          }
                          getContainer={[Function]}
                          getOpenCount={[Function]}
                          onClose={[Function]}
                          onMouseDown={[Function]}
                          onMouseUp={[Function]}
                          onVisibleChanged={[Function]}
                          prefixCls="rc-dialog"
                          scrollLocker={
                            ScrollLocker {
                              "getContainer": [Function],
                              "lock": [Function],
                              "lockTarget": 0,
                              "options": Object {
                                "container": <body
                                  class="ant-scrolling-effect"
                                  style="width: calc(100% - 0px); overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
                                >
                                  <div>
                                    <div
                                      class="rc-dialog-root"
                                    >
                                      <div
                                        class="rc-dialog-mask"
                                      />
                                      <div
                                        aria-labelledby="rcDialogTitle0"
                                        class="rc-dialog-wrap m1iljaow-modal-centered"
                                        role="dialog"
                                        tabindex="-1"
                                      >
                                        <div
                                          class="rc-dialog m1s2ncsn-modal-container"
                                          role="document"
                                        >
                                          <div
                                            aria-hidden="true"
                                            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                            tabindex="0"
                                          />
                                          <div
                                            class="rc-dialog-content"
                                          >
                                            <button
                                              aria-label="Close"
                                              class="rc-dialog-close"
                                              type="button"
                                            >
                                              <span
                                                aria-label="close"
                                                class="delete"
                                              />
                                            </button>
                                            <div
                                              class="rc-dialog-header"
                                            >
                                              <div
                                                class="rc-dialog-title"
                                                id="rcDialogTitle0"
                                              >
                                                <h4
                                                  class="modal-card-title is-4 pt-2 pb-2"
                                                >
                                                  Confirm Peter's Properties uninstallation
                                                </h4>
                                              </div>
                                            </div>
                                            <div
                                              class="rc-dialog-body"
                                            >
                                              Are you sure you wish to uninstall 
                                              Peter's Properties
                                              ? This action will uninstall the app for 
                                              <b>
                                                all
                                              </b>
                                               members of your organisation.
                                            </div>
                                            <div
                                              class="rc-dialog-footer"
                                            >
                                              <div
                                                class="flex"
                                              >
                                                <button
                                                  class="button i5943rj-install-button is-secondary  "
                                                  data-test="disagree-btn"
                                                  type="button"
                                                >
                                                  Cancel
                                                </button>
                                                <button
                                                  class="button i5943rj-install-button is-danger  "
                                                  data-test="agree-btn"
                                                  type="button"
                                                >
                                                  Confirm
                                                </button>
                                              </div>
                                            </div>
                                          </div>
                                          <div
                                            aria-hidden="true"
                                            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                            tabindex="0"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </body>,
                              },
                              "reLock": [Function],
                              "unLock": [Function],
                            }
                          }
                          switchScrollingEffect={[Function]}
                          title={
                            <ModalHeaderV2>
                              Confirm Peter's Properties uninstallation
                            </ModalHeaderV2>
                          }
                          visible={true}
                          wrapClassName="m1iljaow-modal-centered"
                        >
                          <CSSMotion
                            onAppearPrepare={[Function]}
                            onEnterPrepare={[Function]}
                            onVisibleChanged={[Function]}
                            removeOnLeave={true}
                            visible={true}
                          >
                            <DomWrapper>
                              <div
                                className="rc-dialog m1s2ncsn-modal-container"
                                key="dialog-element"
                                onMouseDown={[Function]}
                                onMouseUp={[Function]}
                                role="document"
                                style={Object {}}
                              >
                                <div
                                  aria-hidden="true"
                                  style={
                                    Object {
                                      "height": 0,
                                      "outline": "none",
                                      "overflow": "hidden",
                                      "width": 0,
                                    }
                                  }
                                  tabIndex={0}
                                />
                                <Component
                                  shouldUpdate={true}
                                >
                                  <div
                                    className="rc-dialog-content"
                                  >
                                    <button
                                      aria-label="Close"
                                      className="rc-dialog-close"
                                      onClick={[Function]}
                                      type="button"
                                    >
                                      <span
                                        aria-label="close"
                                        className="delete"
                                        onClick={[Function]}
                                      />
                                    </button>
                                    <div
                                      className="rc-dialog-header"
                                    >
                                      <div
                                        className="rc-dialog-title"
                                        id="rcDialogTitle0"
                                      >
                                        <ModalHeaderV2>
                                          <h4
                                            className="modal-card-title is-4 pt-2 pb-2"
                                          >
                                            Confirm Peter's Properties uninstallation
                                          </h4>
                                        </ModalHeaderV2>
                                      </div>
                                    </div>
                                    <div
                                      className="rc-dialog-body"
                                    >
                                      Are you sure you wish to uninstall 
                                      Peter's Properties
                                      ? This action will uninstall the app for 
                                      <b>
                                        all
                                      </b>
                                       members of your organisation.
                                    </div>
                                    <div
                                      className="rc-dialog-footer"
                                    >
                                      <div
                                        className="flex"
                                      >
                                        <Button
                                          className="i5943rj-install-button"
                                          dataTest="disagree-btn"
                                          disabled={false}
                                          onClick={[MockFunction]}
                                          type="button"
                                          variant="secondary"
                                        >
                                          <button
                                            className="button i5943rj-install-button is-secondary  "
                                            data-test="disagree-btn"
                                            disabled={false}
                                            onClick={[MockFunction]}
                                            type="button"
                                          >
                                            Cancel
                                          </button>
                                        </Button>
                                        <Button
                                          className="i5943rj-install-button"
                                          dataTest="agree-btn"
                                          loading={false}
                                          onClick={[Function]}
                                          type="button"
                                          variant="danger"
                                        >
                                          <button
                                            className="button i5943rj-install-button is-danger  "
                                            data-test="agree-btn"
                                            disabled={false}
                                            onClick={[Function]}
                                            type="button"
                                          >
                                            Confirm
                                          </button>
                                        </Button>
                                      </div>
                                    </div>
                                  </div>
                                </Component>
                                <div
                                  aria-hidden="true"
                                  style={
                                    Object {
                                      "height": 0,
                                      "outline": "none",
                                      "overflow": "hidden",
                                      "width": 0,
                                    }
                                  }
                                  tabIndex={0}
                                />
                              </div>
                            </DomWrapper>
                          </CSSMotion>
                        </Content>
                      </div>
                    </div>
                  </Dialog>
                </Portal>
              </ForwardRef>
            </PortalWrapper>
          </Dialog>
        </ModalV2>
        <UninstallationsSuccessModal
          afterClose={[Function]}
          appDetailData={
            Object {
              "description": "enim facilisis",
              "developer": "Pete's Proptech World Ltd",
              "homePage": "http://myawesomeproptechproduct.io",
              "id": "9b6fd5f7-2c15-483d-b925-01b650538e52",
              "installationId": "123",
              "isWebComponent": true,
              "media": Array [
                Object {
                  "description": "Application Icon",
                  "type": "icon",
                  "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/7d88729f-2366-4561-9d5c-282615f3946b.jpeg",
                },
                Object {
                  "description": "Application Image",
                  "type": "image",
                  "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png",
                },
                Object {
                  "description": "Application Image",
                  "type": "image",
                  "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png",
                },
              ],
              "name": "Peter's Properties",
              "scopes": Array [
                Object {
                  "description": "Read data about developers",
                  "name": "Marketplace/developers.read",
                },
                Object {
                  "description": "Write data about developers",
                  "name": "Marketplace/developers.write",
                },
              ],
              "summary": "vitae elementum curabitur vitae",
              "supportEmail": "support@reapit.com",
              "telephone": "0113 288 2900",
            }
          }
          hasPermissionError={false}
          onSuccessAlertButtonClick={[Function]}
          visible={false}
        >
          <ModalV2
            hasHeader={false}
            isCentered={true}
            isPadding={false}
            onClose={[Function]}
            visible={false}
          >
            <Dialog
              className="m1s2ncsn-modal-container m1257vs8-modal-no-header"
              closeIcon={
                <span
                  aria-label="close"
                  className="delete"
                />
              }
              destroyOnClose={true}
              onClose={[Function]}
              title={<ModalHeaderV2 />}
              visible={false}
              wrapClassName="m1iljaow-modal-centered m1y19rn5-modal-no-padding"
            />
          </ModalV2>
        </UninstallationsSuccessModal>
      </AppUninstallConfirmation>
    </Router>
  </MemoryRouter>
</Provider>
`;
